overflow resolved

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 
 section{
     padding: 100px 11% 90px;
+    overflow: hidden;
 }
 
 .nav{
@@ -544,7 +545,7 @@ textarea{
 
 @media(max-width:1024px){
     .navbar{
-        
+        position: fixed;
         position: absolute;
         top: 100%;
         right: -100%;
@@ -589,7 +590,7 @@ textarea{
     }
 
     .navbar.open{
-        right:20px ;
+        right:0 ;
     }
 }
 
@@ -755,23 +756,24 @@ textarea{
         flex-direction: row;
 
     }
+     form{
+        position: relative;
+        width: 400px;
+     }
 
-    /* .Services{
-        padding: 0;
-    }
-    .service-cont{
-        padding: 0;
-    }
+     input{
+        width: 100%;
+     }
 
-    .card-cont{
-        padding: 0;
-    }
+     textarea{
+        position: absolute;
+        left: 20px;
+     }
+     .blog{
+        max-height: 200vh;
+     }
 
-    .card{
-        width: 500px;
-    } */
-
-
+     
     .port-head{
         margin-bottom: 40px;
     }
@@ -779,7 +781,9 @@ textarea{
         width:150px ;
     }
 
-
+.h3, .p1, .p2{
+    margin-bottom: 40px;
+}
 
     
 }
